# chessd

./: README
game-server/: Changes  Makefile.PL  README  game_server.conf
game-server/lib/game/: server.pm
game-server/lib/game/server/Controller/: .Root.pm.swp  .login.pm.swp  Root.pm  login.pm
game-server/lib/game/server/Model/: main.pm
game-server/lib/game/server/Model/schemas/: main.pm
game-server/lib/game/server/Model/schemas/main/Result/: Openid.pm  Player.pm
game-server/lib/game/server/View/: main.pm
game-server/root/view/main/: .index.tt.swp  index.tt  wrapper.tt
game-server/script/: game_server_cgi.pl  game_server_create.pl  game_server_fastcgi.pl  game_server_server.pl  game_server_test.pl
game-server/t/: 01app.t  controller_login.t  model_main.t  view_main.t
server/: Makefile.am  Makefile.in  README  config.h.in~  configure  configure.ac
server/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
server/src/: Makefile.am  Makefile.in  README.fics.format.client  README.fics.format.server  chessserver.cpp  connect_pq.cpp
server/src/chess/: game.hpp  ptree.hpp
server/src/chess/game/: standard_chess.hpp
server/src/chess/server/: logger.hpp  notifier.hpp  options.hpp  primary.hpp  secondary.hpp
server/src/chess/storage/: base.hpp  postgres.hpp
server/src/chess/storage/postgres/: 00_default.sql
