#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.68)
AC_INIT(chessserver, 0.01, paulsalcido.79@gmail.com)
AM_INIT_AUTOMAKE(chessserver, 2.6)
AC_CONFIG_SRCDIR(config.h.in)
AC_CONFIG_HEADERS(config.h)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES(Makefile
                 src/Makefile)
AC_OUTPUT
